fixing list item extra space

--- a/client/templates/searchBox.less
+++ b/client/templates/searchBox.less
@@ -5,6 +5,8 @@
 
 .search-item-anchor {
 	height: 50px;
+	line-height: 0;
+	padding: 0;
 }
 
 .search-item-img {
